--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -1,35 +1,20 @@
-# image will be published to ghcr.io/<user>/<name>
 name: server
-# description will be included in the image's metadata
 description: This is my personal OS image.
 
-# the base image to build on top of (FROM) and the version tag to use
 base-image: ghcr.io/ublue-os/base-main
-image-version: latest # latest is also supported if you want new updates ASAP
-
-# module configuration, executed in order
-# you can include multiple instances of the same module
+image-version: latest
 modules:
   - type: files
     files:
       - source: system
-        destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
+        destination: /
 
   - type: rpm-ostree
-    repos:
-      # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
       - podman
       - podman-compose
-    remove:
-      # example: removing firefox (in favor of the flatpak)
-      # "firefox" is the main package, "firefox-langpacks" is a dependency
-      # - firefox
-      # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
   - type: systemd
-# this example disables automatic flatpak updates and enables a custom service unit for all users
-system:
     enabled:
       - sshd.service
 
-  - type: signing # this sets up the proper policy & signing files for signed images to work fully
+  - type: signing
