--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -10,9 +10,14 @@ modules:
         destination: /
 
   - type: rpm-ostree
+    repos:
+      - https://download.docker.com/linux/fedora/docker-ce.repo
     install:
-      - podman
-      - podman-compose
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+      - docker-buildx-plugin
+      - docker-compose-plugin
   - type: systemd
     enabled:
       - sshd.service
